# tri

./: CMakeLists.txt  README.md
.github/workflows/: build-and-test.yml
doc/: TODO.md
examples/: CMakeLists.txt  scene1.cpp  scene2.cpp  scene3.cpp  scene4.cpp
src/: CMakeLists.txt  config.h  main.cpp  shader_path.h
src/light/: LightSource.h
src/shaders/calculate_normals/: fs.glsl  gs.glsl  vs.glsl
src/shaders/debug/: fs.glsl  vs.glsl
src/shaders/default/: fs.glsl  vs.glsl
src/shaders/depth/: fs.glsl  vs.glsl
src/shaders/depth/map2d/: gs.glsl  vs.glsl
src/shaders/depth/omni/: fs.glsl  gs.glsl  vs.glsl
src/shaders/heightmap/: tcs.glsl  tes.glsl
src/shaders/lib/: declarations.glsl
src/shaders/lib/fragment/: dirLight.glsl  omniShadowCalculation.glsl  parallaxMapping.glsl  pointLight.glsl  shadowCalculation.glsl  test.glsl
src/shaders/lib/vertex/: test.glsl
src/shaders/light/: fs.glsl  vs.glsl
src/shaders/particle/: fs.glsl  vs.glsl
src/shaders/postprocess/: invert.glsl
src/shaders/postprocess/bloom/: horizontal.glsl  vertical.glsl
src/shaders/postprocess/grayscale/: fs.glsl
src/shaders/postprocess/identity/: fs.glsl  vs.glsl
src/shaders/skybox/: fs.glsl  vs.glsl
src/shaders/solid/: fs.glsl  vs.glsl
src/shaders/sprite/: fs.glsl  vs.glsl
src/tri/: CMakeLists.txt  Camera.cpp  Camera.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h
src/tri/buffers/: Array.h  Buffer.h
src/tri/model/: Mesh.cpp  Mesh.h  Model.cpp  Model.h
src/tri/model/meshes/: Cube.h  Plane.h  Sphere.h  VertexCube.h
src/tri/program/: Program.cpp  Program.h  ShaderLib.cpp  ShaderLib.h  shaderError.cpp  shaderError.h
src/tri/program/materials/: DebugMaterial.h  DefaultMaterial.h  LightMaterial.h  SkyboxMaterial.h  SolidMaterial.h  TextureMaterial.h
src/tri/program/programs/: DefaultProgram.h
src/tri/texture/: Cubemap.cpp  Cubemap.h  Texture.cpp  Texture.h
src/tricore/: CMakeLists.txt  Camera.cpp  Camera.h  Renderer.cpp  Renderer.h  tricore.h
src/tricore/frame/: BasePostprocess.h  ColorFrame.cpp  ColorFrame.h  DepthFrame.cpp  DepthFrame.h  Frame.cpp  Frame.h  OmniDepthFrame.cpp  OmniDepthFrame.h
src/tricore/frame/postprocesses/: BloomPostprocess.h  GrayscalePostprocess.h  InvertPostprocess.h
src/tricore/light/: DirectionalShadowMapper.cpp  DirectionalShadowMapper.h  LightSource.cpp  LightSource.h  OmniShadowMapper.cpp  OmniShadowMapper.h  ShadowMapper.h
src/tricore/model/: HeightmapModel.cpp  HeightmapModel.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  SpatialIfc.cpp  SpatialIfc.h
src/tricore/model/meshes/: Cube.h  Plane.h  Sphere.h  VertexCube.h  VertexPlane.h
src/tricore/program/: Program.cpp  Program.h  ShaderLib.cpp  ShaderLib.h  shaderError.cpp  shaderError.h
src/tricore/program/materials/: DebugMaterial.h  DefaultMaterial.h  LightMaterial.h  SkyboxMaterial.h  SolidMaterial.h  TextureMaterial.h
src/tricore/texture/: Cubemap.cpp  Cubemap.h  Texture.cpp  Texture.h  TextureResourceManager.cpp  TextureResourceManager.h
src/triextra/: CMakeLists.txt  triextra.h
src/triextra/particle/: FountainParticleGenerator.cpp  FountainParticleGenerator.h  ParticleGenerator.cpp  ParticleGenerator.h
src/triextra/sprite/: Sprite.cpp  Sprite.h
src/triutil/: CMakeLists.txt  files.cpp  files.h  triutil.h  window_init.cpp  window_init.h
src/util/: CMakeLists.txt  files.cpp  files.h  window_init.cpp  window_init.h
test/: CMakeLists.txt  example.cpp  obj_loader.cpp  sample_cube.cpp
